--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <title>Song Recomendation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <body>
+  <body style="background: linear-gradient(0deg, rgba(0, 0, 0, 0.47) 0%, rgba(0, 0, 0, 0.47) 100%), url('./assets/img/bg-home.png'), lightgray no-repeat;background-size:cover; background-position: center">
     <main>
-        <section>
-            <h1>HOW ARE YOU FEELING TODAY</h1>
-            <form action="" method="POST"> 
+        <section class="d-flex align-items-center vh-100">
+          <div class="container py-5">
+            <h1 class="text-center fw-bold text-white">HOW ARE YOU FEELING TODAY</h1>
+            <form action="" method="POST" class="mx-auto text-center mt-5 w-75"> 
                 <div class="mb-3">
-                  <input type="email" class="form-control rounded-pill" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Im feeling...">
+                  <input type="email" class="form-control bg-light border border-0 shadow form-control-lg rounded-pill" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Im feeling...">
                 </div>
-                <button type="submit" class="btn btn-success rounded-pill">Go</button>
+                <button type="submit" class="btn btn-success rounded-pill w-25 shadow">Go</button>
               </form>
+            </div>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
